--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@
 buildscript {
     
     repositories {
-        google()
+        //google()
         jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -17,8 +18,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+      //  google()
         jcenter()
+        google()
     }
 }
 
