--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:name=".base.BaseApplication"
         android:theme="@style/Theme.MyAppTheme">
         <activity android:name=".view.LoginActivity">
             <intent-filter>
